tests/snapshots/linting_conformance__lint_error@I001_completed_without_date.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 40,
        },
    },
    LintDiagnostic {
        code: "I001",
        severity: Info,
        message: "Completed action is missing a completion date (I001).",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 40,
        },
    },
    LintDiagnostic {
        code: "E006",
        severity: Error,
        message: "Invalid UUID format: '123'. UUIDs must follow standard format (E006).",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 27,
        },
    },
    LintDiagnostic {
        code: "I001",
        severity: Info,
        message: "Completed action is missing a completion date (I001).",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 27,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 81,
        },
    },
    LintDiagnostic {
        code: "I001",
        severity: Info,
        message: "Completed action is missing a completion date (I001).",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 81,
        },
    },
]
