tests/snapshots/linting_conformance__lint_error@I002_date_without_completed.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "I002",
        severity: Info,
        message: "Action has a completion date but is not marked as closed (completed/cancelled) (I002).",
        range: SourceRange {
            start_row: 1,
            start_col: 30,
            end_row: 1,
            end_col: 47,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 47,
        },
    },
    LintDiagnostic {
        code: "I002",
        severity: Info,
        message: "Action has a completion date but is not marked as closed (completed/cancelled) (I002).",
        range: SourceRange {
            start_row: 2,
            start_col: 38,
            end_row: 2,
            end_col: 55,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 55,
        },
    },
    LintDiagnostic {
        code: "I002",
        severity: Info,
        message: "Action has a completion date but is not marked as closed (completed/cancelled) (I002).",
        range: SourceRange {
            start_row: 3,
            start_col: 17,
            end_row: 3,
            end_col: 34,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 34,
        },
    },
    LintDiagnostic {
        code: "I008",
        severity: Info,
        message: "Blocked actions should have a description explaining why (I008).",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 34,
        },
    },
]
