tests/snapshots/linting_conformance__lint_error@I003_invalid_priority.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 30,
        },
    },
    LintDiagnostic {
        code: "I003",
        severity: Info,
        message: "Priority must be 1-5 (got 0) (I003).",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 30,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 34,
        },
    },
    LintDiagnostic {
        code: "I003",
        severity: Info,
        message: "Priority must be 1-5 (got 6) (I003).",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 34,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 39,
        },
    },
    LintDiagnostic {
        code: "I003",
        severity: Info,
        message: "Priority must be 1-5 (got 10) (I003).",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 39,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 4,
            start_col: 0,
            end_row: 4,
            end_col: 15,
        },
    },
    LintDiagnostic {
        code: "I003",
        severity: Info,
        message: "Priority must be 1-5 (got 99) (I003).",
        range: SourceRange {
            start_row: 4,
            start_col: 0,
            end_row: 4,
            end_col: 15,
        },
    },
]
