tests/snapshots/linting_conformance__lint_error@I004_duplicate_id.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "I004",
        severity: Info,
        message: "Duplicate action ID found: 01950000-0000-7000-8000-000000000001 (I004)",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 70,
        },
    },
    LintDiagnostic {
        code: "I004",
        severity: Info,
        message: "Duplicate action ID found: 01950000-0000-7000-8000-000000000002 (I004)",
        range: SourceRange {
            start_row: 5,
            start_col: 0,
            end_row: 5,
            end_col: 75,
        },
    },
]
