tests/snapshots/linting_conformance__lint_error@I008_blocked_without_description.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 11,
        },
    },
    LintDiagnostic {
        code: "I008",
        severity: Info,
        message: "Blocked actions should have a description explaining why (I008).",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 11,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 30,
        },
    },
    LintDiagnostic {
        code: "I008",
        severity: Info,
        message: "Blocked actions should have a description explaining why (I008).",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 30,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 30,
        },
    },
    LintDiagnostic {
        code: "I008",
        severity: Info,
        message: "Blocked actions should have a description explaining why (I008).",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 30,
        },
    },
]
