tests/snapshots/linting_conformance__lint_error@I010_excessive_duration.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 46,
        },
    },
    LintDiagnostic {
        code: "I010",
        severity: Info,
        message: "Suspiciously long duration (10080 minutes). Is this correct? (I010)",
        range: SourceRange {
            start_row: 1,
            start_col: 22,
            end_row: 1,
            end_col: 46,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 36,
        },
    },
    LintDiagnostic {
        code: "I010",
        severity: Info,
        message: "Suspiciously long duration (2880 minutes). Is this correct? (I010)",
        range: SourceRange {
            start_row: 2,
            start_col: 19,
            end_row: 2,
            end_col: 36,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 51,
        },
    },
    LintDiagnostic {
        code: "I010",
        severity: Info,
        message: "Suspiciously long duration (1440 minutes). Is this correct? (I010)",
        range: SourceRange {
            start_row: 3,
            start_col: 28,
            end_row: 3,
            end_col: 51,
        },
    },
]
