tests/snapshots/linting_conformance__lint_error@W003_uncompleted_parent_all_children_completed.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 3,
            end_col: 21,
        },
    },
    LintDiagnostic {
        code: "W003",
        severity: Warning,
        message: "All children are completed. Should this parent be completed too? (W003)",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 3,
            end_col: 21,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 20,
        },
    },
    LintDiagnostic {
        code: "I001",
        severity: Info,
        message: "Completed action is missing a completion date (I001).",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 20,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 21,
        },
    },
    LintDiagnostic {
        code: "I001",
        severity: Info,
        message: "Completed action is missing a completion date (I001).",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 21,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 5,
            start_col: 0,
            end_row: 8,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "W003",
        severity: Warning,
        message: "All children are completed. Should this parent be completed too? (W003)",
        range: SourceRange {
            start_row: 5,
            start_col: 0,
            end_row: 8,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 6,
            start_col: 0,
            end_row: 6,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "I001",
        severity: Info,
        message: "Completed action is missing a completion date (I001).",
        range: SourceRange {
            start_row: 6,
            start_col: 0,
            end_row: 6,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 7,
            start_col: 0,
            end_row: 7,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "I001",
        severity: Info,
        message: "Completed action is missing a completion date (I001).",
        range: SourceRange {
            start_row: 7,
            start_col: 0,
            end_row: 7,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 8,
            start_col: 0,
            end_row: 8,
            end_col: 22,
        },
    },
    LintDiagnostic {
        code: "I001",
        severity: Info,
        message: "Completed action is missing a completion date (I001).",
        range: SourceRange {
            start_row: 8,
            start_col: 0,
            end_row: 8,
            end_col: 22,
        },
    },
]
