tests/snapshots/linting_conformance__lint_error@W004_missing_creation_date.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "W004",
        severity: Warning,
        message: "Action is missing a creation date. Consider adding ^ or using UUIDv7 (W004).",
        range: SourceRange {
            start_row: 0,
            start_col: 0,
            end_row: 0,
            end_col: 88,
        },
    },
    LintDiagnostic {
        code: "W004",
        severity: Warning,
        message: "Action is missing a creation date. Consider adding ^ or using UUIDv7 (W004).",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 82,
        },
    },
    LintDiagnostic {
        code: "W004",
        severity: Warning,
        message: "Action is missing a creation date. Consider adding ^ or using UUIDv7 (W004).",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 103,
        },
    },
]
