tests/snapshots/linting_conformance__lint_error@W005_creation_date_in_future.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "W005",
        severity: Warning,
        message: "Creation date cannot be in the future (W005).",
        range: SourceRange {
            start_row: 1,
            start_col: 25,
            end_row: 1,
            end_col: 36,
        },
    },
    LintDiagnostic {
        code: "W005",
        severity: Warning,
        message: "Creation date cannot be in the future (W005).",
        range: SourceRange {
            start_row: 2,
            start_col: 28,
            end_row: 2,
            end_col: 39,
        },
    },
    LintDiagnostic {
        code: "W005",
        severity: Warning,
        message: "Creation date cannot be in the future (W005).",
        range: SourceRange {
            start_row: 3,
            start_col: 19,
            end_row: 3,
            end_col: 30,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 36,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 39,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 30,
        },
    },
]
