tests/snapshots/linting_conformance__lint_error@W006_completion_before_creation.snap
---
source: tests/linting_conformance.rs
expression: diagnostics
---
[
    LintDiagnostic {
        code: "W006",
        severity: Warning,
        message: "Completion date cannot be before creation date (W006).",
        range: SourceRange {
            start_row: 1,
            start_col: 32,
            end_row: 1,
            end_col: 43,
        },
    },
    LintDiagnostic {
        code: "W006",
        severity: Warning,
        message: "Completion date cannot be before creation date (W006).",
        range: SourceRange {
            start_row: 2,
            start_col: 35,
            end_row: 2,
            end_col: 52,
        },
    },
    LintDiagnostic {
        code: "W006",
        severity: Warning,
        message: "Completion date cannot be before creation date (W006).",
        range: SourceRange {
            start_row: 3,
            start_col: 41,
            end_row: 3,
            end_col: 52,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 1,
            start_col: 0,
            end_row: 1,
            end_col: 43,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 2,
            start_col: 0,
            end_row: 2,
            end_col: 52,
        },
    },
    LintDiagnostic {
        code: "missing-id",
        severity: Info,
        message: "Action is missing a UUID. Use 'Hydrate Action' to add one.",
        range: SourceRange {
            start_row: 3,
            start_col: 0,
            end_row: 3,
            end_col: 52,
        },
    },
]
